<?xml version="1.0"?>
<package format="2">
  <name>grizzly_base</name>
  <version>0.3.3</version>
  <description>Grizzly's mobility and sensor base.</description>

  <author email="rgariepy@clearpathrobotics.com">Ryan Gariepy</author>
  <author email="mpurvis@clearpathrobotics.com">Mike Purvis</author>

  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/Robots/Grizzly</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>controller_manager</depend>
  <depend>diagnostic_updater</depend>
  <depend>grizzly_motor_driver</depend>
  <depend>grizzly_motor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>grizzly_msgs</depend>
  <depend>realtime_tools</depend>
  <depend>rosserial_server</depend>
  <depend>sensor_msgs</depend>
  <depend>topic_tools</depend>

  <build_depend>hardware_interface</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>socat</exec_depend>
  <exec_depend>diagnostic_aggregator</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>imu_filter_madgwick</exec_depend>
  <exec_depend>grizzly_control</exec_depend>
  <exec_depend>grizzly_description</exec_depend>
  <exec_depend>python-scipy</exec_depend>
  <exec_depend>rosserial_python</exec_depend>
  <exec_depend>tf</exec_depend>

  <test_depend>roslint</test_depend>

  <export>
  </export>
</package>
