<?xml version="1.0"?>
<package>
  <name>grizzly_bringup</name>
  <version>0.2.1</version>
  <description>Scripts for installing Grizzly's robot software.</description>

  <author email="mpurvis@clearpathrobotics.com">Mike Purvis</author>
  <author email="tbaltovski@clearpathrobotics.com">Tony Baltovski</author>

  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/Robots/Grizzly</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>

  <run_depend>lms1xx</run_depend>
  <run_depend>microstrain_3dmgx2_imu</run_depend>

  <run_depend>diagnostic_aggregator</run_depend>
  <run_depend>grizzly_base</run_depend>
  <run_depend>grizzly_description</run_depend>
  <run_depend>grizzly_motion</run_depend>
  <run_depend>nmea_comms</run_depend>
  <run_depend>nmea_navsat_driver</run_depend>
  <run_depend>roboteq_driver</run_depend>
  <run_depend>robot_upstart</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rosserial_server</run_depend>
  <run_depend>rosserial_python</run_depend>
  <run_depend>um6</run_depend>

  <export>
  </export>
</package>
