<?xml version="1.0"?>
<package format="2">
  <name>grizzly_bringup</name>
  <version>0.3.6</version>
  <description>Scripts for installing Grizzly's robot software.</description>

  <author email="mpurvis@clearpathrobotics.com">Mike Purvis</author>

  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/Robots/Grizzly</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>microstrain_3dmgx2_imu</exec_depend>
  <exec_depend>diagnostic_aggregator</exec_depend>
  <exec_depend>grizzly_base</exec_depend>
  <exec_depend>grizzly_description</exec_depend>
  <exec_depend>nmea_comms</exec_depend>
  <exec_depend>nmea_navsat_driver</exec_depend>
  <exec_depend>robot_upstart</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rosserial_server</exec_depend>
  <exec_depend>rosserial_python</exec_depend>
  <exec_depend>um6</exec_depend>
  <exec_depend>velodyne_pointcloud</exec_depend>
  <exec_depend>velodyne_driver</exec_depend>
  <exec_depend>lms1xx</exec_depend>
  <exec_depend>flir_ptu_driver</exec_depend>
  <exec_depend>pointgrey_camera_driver</exec_depend>

  <test_depend>roslaunch</test_depend>

  <export>
  </export>
</package>
