<?xml version="1.0"?>
<package>
  <name>grizzly_node</name>
  <version>0.0.1</version>
  <description>
    grizzly_node package that contains various nodes and scripts to communicate with lower lever hardware that control the Grizzly vehicle
  
  </description>

  <author email="rgariepy@clearpathrobotics.com">Ryan Gariepy</author>
  <maintainer email="pmukherj@clearpathrobotics.com">Prasenjit Mukherjee</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>grizzly_msgs</run_depend>
  <run_depend>roboteq_msgs</run_depend>
  <run_depend>tf</run_depend>

</package>


