<?xml version="1.0"?>
<package>
  <name>grizzly_robot</name>
  <version>0.2.0</version>
  <description>Metapackage for Grizzly robot computers.</description>
  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>grizzly_base</run_depend>
  <run_depend>grizzly_bringup</run_depend>
  <run_depend>grizzly_firmware</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
